WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278504
Set timeout for optimistically upgraded navigations based on current network conditions
https://bugs.webkit.org/show_bug.cgi?id=278504
Summary
Set timeout for optimistically upgraded navigations based on current network ...
Matthew Finkel
Reported
2024-08-21 18:05:18 PDT
Set timeout for optimistically upgraded navigations based on current network conditions
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-21 18:05:28 PDT
<
rdar://problem/134458774
>
Matthew Finkel
Comment 2
2024-08-21 18:15:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32568
EWS
Comment 3
2024-09-11 10:48:07 PDT
Committed
283494@main
(50f926d27862): <
https://commits.webkit.org/283494@main
> Reviewed commits have been landed. Closing PR #32568 and removing active labels.
EWS
Comment 4
2024-09-12 21:20:37 PDT
Committed
283286.30@safari-7620-branch
(8ae98dbb16bc): <
https://commits.webkit.org/283286.30@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1758 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug